fix: ajustes simples