@@ -37,8 +37,12 @@ public class EtapaService implements br.edu.ufape.sguEditaisService.servicos.int
 
     private void validarConsistenciaTemporal(Etapa etapa) {
         if (etapa.getEdital() == null || etapa.getEdital().getId() == null) {
-            return;
+            return; // Validação só se aplica a etapas de um edital concreto
         }
+
+        // Busca o edital completo para ter acesso às suas datas de inscrição
+        Edital edital = editalRepository.findById(etapa.getEdital().getId())
+                .orElseThrow(() -> new EditalNotFoundException(etapa.getEdital().getId()));
 
         List<Etapa> todasEtapas = etapaRepository.findByEditalIdOrderByOrdemAsc(etapa.getEdital().getId());
 
@@ -49,6 +53,26 @@ public class EtapaService implements br.edu.ufape.sguEditaisService.servicos.int
 
         todasEtapas.sort(Comparator.comparingInt(Etapa::getOrdem));
 
+        if (todasEtapas.isEmpty()) {
+            return; // Nenhuma etapa para validar
+        }
+
+        // Verifica se as etapas estão dentro do período de inscrição do edital
+        Etapa primeiraEtapa = todasEtapas.getFirst();
+        Etapa ultimaEtapa = todasEtapas.getLast();
+
+        if (primeiraEtapa.getDataInicio() != null && edital.getInicioInscricao() != null &&
+                primeiraEtapa.getDataInicio().isBefore(edital.getInicioInscricao())) {
+            throw new IllegalStateException("A data de início da primeira etapa ('" + primeiraEtapa.getNome() + "') não pode ser anterior ao início das inscrições do edital.");
+        }
+
+        if (ultimaEtapa.getDataFim() != null && edital.getFimIncricao() != null &&
+                ultimaEtapa.getDataFim().isAfter(edital.getFimIncricao())) {
+            throw new IllegalStateException("A data de fim da última etapa ('" + ultimaEtapa.getNome() + "') não pode ser posterior ao fim das inscrições do edital.");
+        }
+        // ==========================================================
+
+        // Validação de sequência entre etapas (já existente)
         for (int i = 1; i < todasEtapas.size(); i++) {
             Etapa etapaAnterior = todasEtapas.get(i - 1);
             Etapa etapaAtual = todasEtapas.get(i);
@@ -121,12 +145,12 @@ public class EtapaService implements br.edu.ufape.sguEditaisService.servicos.int
 
         long editalPaiId = -1;
         long tipoEditalPaiId = -1;
-        boolean isEditalContext = etapas.get(0).getEdital() != null;
+        boolean isEditalContext = etapas.getFirst().getEdital() != null;
 
         if(isEditalContext) {
-            editalPaiId = etapas.get(0).getEdital().getId();
+            editalPaiId = etapas.getFirst().getEdital().getId();
         } else {
-            tipoEditalPaiId = etapas.get(0).getTipoEditalModelo().getId();
+            tipoEditalPaiId = etapas.getFirst().getTipoEditalModelo().getId();
         }
 
         for (Etapa etapa : etapas) {
